@@ -2,7 +2,7 @@ Source: brot2
 Section: graphics
 Priority: optional
 Maintainer: Ross Younger <0ryoungerk.launchpad@coriolis.greenend.org.uk>
-Build-Depends: debhelper (>= 7.0.50~), libgtk2.0-dev (>=2.24), libglib2.0-dev (>= 2.28), libgtkmm-2.4-dev (>= 2.24), libglibmm-2.4-dev (>= 2.28), libpng12-dev (>= 1.2.41), libgdk-pixbuf2.0-dev
+Build-Depends: debhelper (>= 7.0.50~), libgtk2.0-dev (>=2.24), libglib2.0-dev (>= 2.28), libgtkmm-2.4-dev (>= 2.24), libglibmm-2.4-dev (>= 2.28), libpng12-dev (>= 1.2.41), libgdk-pixbuf2.0-dev, libcairo2-dev (>= 1.10), libpango-dev (>= 1.28)
 Standards-Version: 3.9.1
 Vcs-Git: git://git.chiark.greenend.org.uk/~ryounger/brot2.git
 Vcs-Browser: http://www.chiark.greenend.org.uk/ucgi/~ryounger/git?p=brot2.git;a=summary
